# server

./: CMakeLists.txt  readme.txt
include/: generic.h  main.h
src/: main.c
src/device/: device_main.c  device_main.h  req_device_main.c  req_device_main.h
